01/30/2004 Bob Rossi <bob@brasko.net>

   * fork_util.c: invoke_debugger, honors the choice parameter now.
   
01/29/2004 Bob Rossi <bob@brasko.net>

   * fs_util.h: Changed PATH_MAX to FSUTIL_PATH_MAX and #include <limits.h> to
   #include "fs_util.h"
   * fs_util.c: ditto
   * fork_util.c: ditto

01/08/2004 Bob Rossi <bob@brasko.net>

   * Makefile.in: regenerated with documented autotools version
   * src/Makefile.in: ditto

version 0.4.0-1 cygwin release

12/03/2003 Ronald Landheer-Cieslak <ronald@landheer.com>

   * Makefile.in: re-generated
   * src/Makefile.in: ditto
   * src/Makefile.am: set include path relative to source tree
   
version 0.4.0 (10/28/2003):

10/23/2003 Bob Rossi <bob@brasko.net>

   * error.h: Add err_verbose prototype.
   * error.c: Add err_verbose implementation.
   Add static int to library.

08/27/2003 Bob Rossi <bob@brasko.net>

   * fork_util.c: invoke_debugger, adding --annotate=2 when invoking GDB.

08/16/2003 Bob Rossi <bob@brasko.net>
	
	* fork_util.h: invoke_debugger, added 'const' to arg path.
	util_free_tty, added const to arg sname.
	* fork_util.c: ditto

version 0.3.4 (08/14/2003):

version 0.3.3a (07/16/2003):

version 0.3.3 (07/15/2003):

version 0.3.2 (06/25/2003):

06/23/2003 Bob Rossi <bob_rossi@cox.net>

	* io.h: Added io_data_ready function. Checks to see if data is 
	ready for reading on a file descriptor.
	* io.c: Implements io_data_ready

06/01/2003 Bob Rossi <bob_rossi@cox.net>

    * fs_util.h: Changed 'char *' to 'const char *' in prototypes where needed
    * fs_util.h: Removed invalid return comment in fs_util_get_path
    * fs_util.h: Added better comment for fs_util_create_dir_in_base
    * fs_util.c: Changed definitions from 'char *' to 'const char *'

04/30/2003 Bob Rossi <bob_rossi@cox.net>

    * Adding include/terminal.h and src/terminal.c: They provide functions to
    change the terminal settings ( cbreak, raw, normal ... )

version 0.3.1 (04/28/2003):

04/27/2003 Bob Rossi <bob_rossi@cox.net>
